--- a/lymApp/package.json
+++ b/lymApp/package.json
@@ -21,6 +21,7 @@
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-calendars": "^1.1312.0",
+    "react-native-collapsible": "^1.6.2",
     "react-native-device-info": "^14.0.4",
     "react-native-gesture-handler": "^2.25.0",
     "react-native-linear-gradient": "^2.8.3",
