--- a/lymApp/package.json
+++ b/lymApp/package.json
@@ -25,11 +25,13 @@
     "react-native-device-info": "^14.0.4",
     "react-native-gesture-handler": "^2.25.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-modal": "^14.0.0-rc.1",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "^3.18.0",
     "react-native-reanimated-carousel": "^4.0.2",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.10.0",
+    "react-native-star-rating-widget": "^1.9.2",
     "react-native-svg": "^15.12.0",
     "react-native-vector-icons": "^10.2.0",
     "tailwindcss": "^3.4.17"
