--- a/frontend/lymApp/package.json
+++ b/frontend/lymApp/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native-stack": "^7.3.13",
     "@react-navigation/stack": "^7.3.2",
     "lottie-react-native": "^7.2.2",
+    "lucide-react-native": "^0.536.0",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-native": "0.79.2",
