--- a/backend/package.json
+++ b/backend/package.json
@@ -2,17 +2,20 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "temp.js",
+  "main": "App.js",
   "scripts": {
+    "start": "NODE_ENV=production node app.js",
+    "dev": "NODE_ENV=development nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
-    "mongodb": "^6.19.0"
+    "mongodb": "^6.19.0",
+    "nodemon": "^3.1.10"
   }
 }
