--- a/frontend/lymApp/android/app/build.gradle
+++ b/frontend/lymApp/android/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: "com.android.application"
 apply plugin: "org.jetbrains.kotlin.android"
 apply plugin: "com.facebook.react"
 apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
+apply plugin: "com.google.gms.google-services"
 
 
 /**
@@ -118,4 +119,6 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+  implementation platform('com.google.firebase:firebase-bom:34.2.0')
+  implementation 'com.google.firebase:firebase-analytics'
 }
