--- a/frontend/lymApp/.gitignore
+++ b/frontend/lymApp/.gitignore
@@ -77,3 +77,5 @@ yarn-error.log
 #firebase login
 google-services.json
 GoogleService-Info.plist
+# Ignore sensitive iOS files
+ios/GoogleService-Info.plist
