--- a/frontend/lymApp/package.json
+++ b/frontend/lymApp/package.json
@@ -16,12 +16,12 @@
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
     "@react-navigation/stack": "^7.3.2",
-    "lottie-react-native": "^7.2.2",
+    "lottie-react-native": "^7.3.4",
     "lucide-react-native": "^0.536.0",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-native": "0.79.2",
-    "react-native-calendars": "^1.1312.0",
+    "react-native-calendars": "^1.1313.0",
     "react-native-collapsible": "^1.6.2",
     "react-native-device-info": "^14.0.4",
     "react-native-gesture-handler": "^2.25.0",
@@ -33,6 +33,7 @@
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.10.0",
     "react-native-star-rating-widget": "^1.9.2",
+    "react-native-svg": "^15.13.0",
     "react-native-vector-icons": "^10.3.0",
     "tailwindcss": "^3.4.17"
   },
