--- a/frontend/lymApp/package.json
+++ b/frontend/lymApp/package.json
@@ -23,6 +23,7 @@
     "react-native": "0.79.2",
     "react-native-calendars": "^1.1313.0",
     "react-native-collapsible": "^1.6.2",
+    "react-native-config": "^1.5.9",
     "react-native-device-info": "^14.0.4",
     "react-native-gesture-handler": "^2.25.0",
     "react-native-linear-gradient": "^2.8.3",
@@ -54,7 +55,6 @@
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
-    "react-native-dotenv": "^3.4.11",
     "react-test-renderer": "19.0.0",
     "typescript": "5.0.4"
   },
