--- a/frontend/lymApp/package.json
+++ b/frontend/lymApp/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^5.2.6",
+    "@react-native-google-signin/google-signin": "^16.0.0",
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/elements": "^2.4.2",
     "@react-navigation/native": "^7.1.9",
@@ -23,8 +24,8 @@
     "react-native": "0.79.2",
     "react-native-calendars": "^1.1313.0",
     "react-native-collapsible": "^1.6.2",
-    "react-native-config": "^1.5.9",
     "react-native-device-info": "^14.0.4",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.25.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^14.0.0-rc.1",
