--- a/frontend/lymApp/.gitignore
+++ b/frontend/lymApp/.gitignore
@@ -80,4 +80,6 @@ GoogleService-Info.plist
 # Ignore sensitive iOS files
 ios/GoogleService-Info.plist
 
+# react-native-config codegen
+ios/tmp.xcconfig
 .env
