--- a/frontend/lymApp/package.json
+++ b/frontend/lymApp/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^5.2.6",
+    "@react-native-firebase/app": "^23.3.1",
+    "@react-native-firebase/auth": "^23.3.1",
     "@react-native-google-signin/google-signin": "^16.0.0",
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/elements": "^2.4.2",
