--- a/frontend/lymApp/ios/lymApp.xcodeproj/xcshareddata/xcschemes/lymApp.xcscheme
+++ b/frontend/lymApp/ios/lymApp.xcodeproj/xcshareddata/xcschemes/lymApp.xcscheme
@@ -7,13 +7,13 @@
          </BuildActionEntry>
       </BuildActionEntries>
       <PreActions>
-         <ExecutionAction ActionType="Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
+         <!-- <ExecutionAction ActionType="Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
             <ActionContent title="Run Script" scriptText="&quot;${SRCROOT}/../node_modules/react-native-config/ios/ReactNativeConfig/BuildXCConfig.rb&quot; &quot;${SRCROOT}/..&quot; &quot;${SRCROOT}/tmp.xcconfig&quot;&#xA;">
                <EnvironmentBuildable>
                   <BuildableReference BuildableIdentifier="primary" BlueprintIdentifier="13B07F861A680F5B00A75B9A" BuildableName="lymApp.app" BlueprintName="lymApp" ReferencedContainer="container:lymApp.xcodeproj"/>
                </EnvironmentBuildable>
             </ActionContent>
-         </ExecutionAction>
+         </ExecutionAction> -->
       </PreActions>
    </BuildAction>
    <TestAction buildConfiguration="Debug" selectedDebuggerIdentifier="Xcode.DebuggerFoundation.Debugger.LLDB" selectedLauncherIdentifier="Xcode.DebuggerFoundation.Launcher.LLDB" shouldUseLaunchSchemeArgsEnv="YES">
